--- a/deepspeed_config.json
+++ b/deepspeed_config.json
@@ -30,7 +30,7 @@
     "zero_optimization": {
       "stage": 3,
       "offload_optimizer": {
-        "device": "cpu",
+        "device": "none",
         "pin_memory": true
       },
       "offload_param": {
